fix webkit flicker on header

--- a/client/assets/styles/scss/globals/globals.scss
+++ b/client/assets/styles/scss/globals/globals.scss
@@ -58,3 +58,10 @@ body,
 .row {
   margin: 0 -15px;
 }
+
+// webkit flicker bug:
+// https://code.google.com/p/chromium/issues/detail?id=138415
+// https://code.google.com/p/chromium/issues/detail?id=311583
+.webkit-flicker {
+  -webkit-backface-visibility: hidden;
+}
